# aiops_alerts

./: README.md  pyproject.toml
alerts/: main.py
alerts/pydantic_files/: alerts.py  chat_service.py
alerts/routes/: alerts.py
alerts/scripts/: migrate_logs.py
alerts/services/: alert_service.py  chat_service.py  postgres_service.py  prompts.py  vector_service.py  weaviate_client.py
app/: main.py
app/pydantic_files/: chat_service.py
app/routes/: alerts.py
app/scripts/: migrate_logs.py
app/services/: alert_service.py  chat_service.py  postgres_service.py  vector_service.py  weaviate_client.py
logs/: main.py
logs/pydantic_files/: alerts.py  chat_service.py
logs/routes/: alerts.py
logs/scripts/: migrate_logs.py
logs/services/: alert_service.py  chat_service.py  postgres_service.py  prompts.py  vector_service.py  weaviate_client.py
